Bug 150599 - FILEOPEN .dif files in LibreOffice Calc
Summary: FILEOPEN .dif files in LibreOffice Calc
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:7.5.0 target:7.4.1
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2022-08-25 09:22 UTC by Roberto
Modified: 2022-09-06 09:17 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
dif file used for test (89.80 KB, text/plain)
2022-08-25 09:26 UTC, Roberto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roberto 2022-08-25 09:22:43 UTC
Description:
Opening .dif files from MS Excel in Calc 7.4.0.3 returns #IND:? in each cell. 
Works fine with 7.0.4.
Tested with same result in Debian Gnu Linux 11 and Windows 10



Steps to Reproduce:
1. Open a .dif file
2.
3.

Actual Results:
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?
#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?	#IND:?


Expected Results:
1	2	3	4	5	6	7	8	9	10	11
2	2	3	4	5	6	7	8	9	10	11
3	2	3	4	5	6	7	8	9	10	11
4	2	3	4	5	6	7	8	9	10	11
5	2	3	4	5	6	7	8	9	10	11
6	2	3	4	5	6	7	8	9	10	11
7	2	3	4	5	6	7	8	9	10	11
8	2	3	4	5	6	7	8	9	10	11
9	2	3	4	5	6	7	8	9	10	11
10	2	3	4	5	6	7	8	9	10	11
11	2	3	4	5	6	7	8	9	10	11
12	2	3	4	5	6	7	8	9	10	11
13	2	3	4	5	6	7	8	9	10	11
14	2	3	4	5	6	7	8	9	10	11
15	2	3	4	5	6	7	8	9	10	11
16	2	3	4	5	6	7	8	9	10	11
17	2	3	4	5	6	7	8	9	10	11



Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.3 / LibreOffice Community
Build ID: f85e47c08ddd19c015c0114a68350214f7066f5a
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: it-IT (it_IT.UTF-8); UI: it-IT
Flatpak
Calc: threaded
Comment 1 Roberto 2022-08-25 09:26:36 UTC
Created attachment 182010 [details]
dif file used for test
Comment 2 Eike Rathke (retired, only occasionally showing up) 2022-08-25 09:59:36 UTC
Reproduced. Works fine also in 7.3.5
Comment 3 Commit Notification 2022-08-25 12:19:13 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9c3c564659320fb24d2a9c230464f06cf855a136

Resolves: tdf#150599 Move obtaining data into loop again

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Eike Rathke (retired, only occasionally showing up) 2022-08-25 12:21:05 UTC
Pending review
https://gerrit.libreoffice.org/c/core/+/138815 for 7-4
https://gerrit.libreoffice.org/c/core/+/138816 for 7-4-1
Comment 5 Commit Notification 2022-08-25 21:04:34 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/5b6b1f230529070259d81193a78d38b00fb8aec3

Resolves: tdf#150599 Move obtaining data into loop again

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-08-29 05:39:02 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-4-1":

https://git.libreoffice.org/core/commit/5ceb0695169e6087ae546687fb22800eaf0da67d

Resolves: tdf#150599 Move obtaining data into loop again

It will be available in 7.4.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-09-06 09:17:27 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f2d7f2a28c4334feed4a12eb1553b8d0563c0fc9

tdf#150599: sc_filters_test: Add unittest

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.