Resolves: tdf#150599 Move obtaining data into loop again

Regression from

    commit a23a7eea5cfcdc50d09be248828cb1e6293e5ebb
    CommitDate: Sun Dec 26 20:36:26 2021 +0100

        Avoid OUStringBuffer::toString where possible

that erroneously also moved obtaining the data string outside the
loop, whyever..

Change-Id: I329108d42db43c1ab22ba82650d801e595dd7ece
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138805
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit b5629341edecf10c18087811c77708b01dd15a15)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138815
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>